# fcsd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bench/: Cargo.toml  README.md
bench/benches/: timing.rs
bench/src/: memory.rs
examples/: toy.rs
src/: builder.rs  decoder.rs  intvec.rs  iter.rs  lib.rs  locator.rs  predictive_iter.rs  prefix_iter.rs  set.rs  utils.rs
src/set/: iter.rs  prefix_iter.rs
