[package]
name = "fcsd"
version = "0.1.2"
edition = "2018"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Front-coding string dictionary."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/fcsd"
repository = "https://github.com/kampersanda/fcsd"
homepage = "https://github.com/kampersanda/fcsd"
keywords = ["string", "index", "dictionary", "compression"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[dev-dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
