[package]
name = "fcsd-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcsd =  { path = ".." }
fst = "0.4"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bin]]
name = "memory"
path = "src/memory.rs"

[[bench]]
name = "timing"
harness = false
